--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <title>Loading TyranoScript</title>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GH3Y9TRFK0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GH3Y9TRFK0');
+</script>
+  
 <link rel="SHORTCUT ICON" href="./data/image/favicon.png">
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
