--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-GH3Y9TRFK0');
+  gtag('config', 'UA-216687422-1');
 </script>
   
 <link rel="SHORTCUT ICON" href="./data/image/favicon.png">
